nickel-lang-lib/tests/integration/fail/contracts/type_annot_let.ncl
# test.type = 'error'
#
# [test.metadata]
# error = 'EvalError::BlameError'
let f : Number -> Number = fun x => x in
f "a"
